--- a/training_stocks.ipynb
+++ b/training_stocks.ipynb
@@ -231,7 +231,7 @@
         "id": "yKHJpYci1wF-"
       },
       "source": [
-        "# Step 2 : Read the stok data from the directory"
+        "# Step 2 : Read the stock data from the directory"
       ]
     },
     {
